ISIS-2158: major(!) ... remove static reference to MetaModelContext